Added app.js for hamburger-menu and a little tweaking

--- a/index.html
+++ b/index.html
@@ -64,8 +64,18 @@
 
                 <!-- Hamburger menu -->
                 <div class="hamburger-menu">
-                    <i class="fas fa-bars fa-2x"></i>
+                    <div class="hamburger-btn"><i class="fas fa-bars fa-2x"></i></div>
+                    <div class="menu">
+                        <a href="#" id="active">Home</a>
+                        <a href="#">Pages</a>
+                        <a href="#">Products</a>
+                        <a href="#">Blog</a>
+                        <a href="#">Shop</a>
+                        <a href="#">Contact</a>
+                    </div>
                 </div>
+
+
             </div>
         </div>
     </nav>
@@ -272,5 +282,7 @@
             </div>
         </div>
     </section>
+
+    <script src="app.js"></script>
 </body>
 </html>
