Fixed the Lamp, added the discount image and shopex offer

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                 <div class="hero-img">
                     <img src="img/Ellipse 60.svg" alt="" class="ellipse-1">
                     <img src="img/Ellipse 60.svg" alt="" class="ellipse-2">
+                    <img src="img/Group 130.png" alt="" class="discount">
                     <img src="img/Shell-Shaped-Armchair-Pink-Velvet-Fabric-One-Seater-Sofa-for-Living-Room 1.png" alt="" class="couch">
                 </div>
             </div>
@@ -277,6 +278,47 @@
                                 <p class="line-through">$65.00</p>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Shopex -->
+    <section class="shopex">
+        <div class="container">
+            <h2>What Shopex Offer!</h2>
+            <div class="flex">
+                <div class="small-card">
+                    <img src="img/free-delivery 1.png" alt="">
+                    <div class="text">
+                        <h3>24/7 Support</h3>
+                        <p>Lorem ipsum, dolor sit amet
+                             consectetur adipisicing elit. Explicabo, aperiam.</p>
+                    </div>
+                </div>
+                <div class="small-card">
+                    <img src="img/cashback 1.png" alt="">
+                    <div class="text">
+                        <h3>24/7 Support</h3>
+                        <p>Lorem ipsum, dolor sit amet
+                             consectetur adipisicing elit. Explicabo, aperiam.</p>
+                    </div>
+                </div>
+                <div class="small-card">
+                    <img src="img/premium-quality 1.png" alt="">
+                    <div class="text">
+                        <h3>24/7 Support</h3>
+                        <p>Lorem ipsum, dolor sit amet
+                             consectetur adipisicing elit. Explicabo, aperiam.</p>
+                    </div>
+                </div>
+                <div class="small-card">
+                    <img src="img/24-hours-support 1.png" alt="">
+                    <div class="text">
+                        <h3>24/7 Support</h3>
+                        <p>Lorem ipsum, dolor sit amet
+                             consectetur adipisicing elit. Explicabo, aperiam.</p>
                     </div>
                 </div>
             </div>
