Added a unique features section and fixed the gap problem with browsers

--- a/index.html
+++ b/index.html
@@ -325,6 +325,44 @@
         </div>
     </section>
 
+    <!-- Unique Features -->
+    <section class="unique-features">
+        <div class="container">
+            <div class="flex">
+                <div class="image">
+                    <img src="img/Ellipse 63.svg" alt="" id="ellipse">
+                    <img src="img/Home-Stylish-Club-Sofa-Chair-Pleated-Sofa-Armchair-with-Golden-Legs 1 (1).png" alt="">
+                </div>
+                <div class="product-features">
+                    <h2>Unique Features Of latest &
+                        Trending Products
+                    </h2>
+                    <div class="feature-list">
+                        <div class="list">
+                            <span class="bullet-1 bullets"></span>
+                            <p>All frames constructed with hardwood solids and laminates</p>
+                        </div>
+                        <div class="list">
+                            <span class="bullet-2 bullets"></span>
+                            <p>Reinforced with double wood dowels, glue, screw - nails corner blocks and machine nails</p>
+                        </div>
+                        <div class="list">
+                            <span class="bullet-3 bullets"></span>
+                            <p>Arms, backs and seats are structurally reinforced</p>
+                        </div>
+                    </div>
+                    <form>
+                        <button class="primary-btn">Add To Cart</button>
+                        <div>
+                            <h5>B&B Italian Sofa</h5>
+                            <p>$32.00</p>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="app.js"></script>
 </body>
 </html>
