Added discount Item section

--- a/index.html
+++ b/index.html
@@ -363,6 +363,157 @@
         </div>
     </section>
 
+    <section class="trending">
+        <div class="container">
+            <div class="flex">
+                <h2>Trending Products</h2>
+                <div class="flex-wrapper">
+                    <div class="card">
+                        <div class="thumbnail">
+                            <img src="img/image 1171.png" alt="">
+                        </div>
+                        <h3>Cantiliever chair</h3>
+                        <div class="price">
+                            <p>$26.00</p>
+                            <p class="line-through">$42.00</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="thumbnail">
+                            <img src="img/image 1170.png" alt="">
+                        </div>
+                        <h3>Cantiliever chair</h3>
+                        <div class="price">
+                            <p>$26.00</p>
+                            <p class="line-through">$42.00</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="thumbnail">
+                            <img src="img/image 31.png" alt="">
+                        </div>
+                        <h3>Cantiliever chair</h3>
+                        <div class="price">
+                            <p>$26.00</p>
+                            <p class="line-through">$42.00</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="thumbnail">
+                            <img src="img/image 32 (1).png" alt="">
+                        </div>
+                        <h3>Cantiliever chair</h3>
+                        <div class="price">
+                            <p>$26.00</p>
+                            <p class="line-through">$42.00</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- grid wrapper -->
+                <div class="grid-wrapper">
+                    <div class="row bg-pink">
+                        <div class="text">
+                            <h3>23% off in all products</h3>
+                            <a href="#">Shop Now</a>
+                        </div>
+                        <img src="img/image 1162.png" alt="">
+                    </div>
+                    <div class="row">
+                        <div class="text">
+                            <h3>23% off in all products</h3>
+                            <a href="#">View Collection</a>
+                        </div>
+                        <img src="img/image 1161.png" alt="">
+                    </div>
+                    <div class="flex-row">
+                        <div>
+                            <div class="thumbnail">
+                                <img src="img/image 30.png" alt="">
+                            </div>
+                            <div class="price-tag">
+                                <h4>Executive Seat chair</h3>
+                                <p class="line-through">$32.00</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="thumbnail">
+                                <img src="img/image 19.png" alt="">
+                            </div>
+                            <div class="price-tag">
+                                <h4>Executive Seat chair</h3>
+                                <p class="line-through">$32.00</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="thumbnail">
+                                <img src="img/image 28.png" alt="">
+                            </div>
+                            <div class="price-tag">
+                                <h4>Executive Seat chair</h3>
+                                <p class="line-through">$32.00</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Discount Item -->
+    <section class="discount-item">
+        <div class="container">
+            <div class="flex">
+                <h2>Discount Item</h2>
+                <div class="links">
+                    <a href="#" id="active">
+                        Wood Chair
+                    </a>
+                    <a href="#">Plastic Chair</a>
+                    <a href="#">Sofa Collection</a>
+                </div>
+
+                <div class="discount-showcase">
+                    <!-- Left side -->
+                    <div class="left-side">
+                        <h1>20% Discount Of All Products</h1>
+                        <h3 class="pink">Earn Sofa Compact</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Quam doloremque commodi facilis quas voluptatibus!</p>
+                        <div class="features">
+                            <div>
+                                <i class="fas fa-check"></i>Material expose like metals
+                            </div>
+                            <div>
+                                <i class="fas fa-check"></i>Clear lines and geomatic figures
+                            </div>
+                            <div>
+                                <i class="fas fa-check"></i>Simple neutral colours.
+                            </div>
+                            <div>
+                                <i class="fas fa-check"></i>Material expose like metals
+                            </div>
+                        </div>
+                        <button class="primary-btn">Shop Now</button>
+                    </div>
+
+                    <!-- Right side with image-->
+                    <div class="right-side">
+                        <img src="img/Ellipse 60.svg" alt="" class="ellipse">
+                        <img src="img/tortuga-01-b 1.png" alt="" class="chair">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Top Categories -->
+    <section class="top">
+        <div class="container">
+            <div class="flex">
+                <h2>Top Categories</h2>
+            </div>
+        </div>
+    </section>
+
     <script src="app.js"></script>
 </body>
 </html>
