Added more sections and footer

--- a/index.html
+++ b/index.html
@@ -510,6 +510,171 @@
         <div class="container">
             <div class="flex">
                 <h2>Top Categories</h2>
+                <div class="flex-wrapper">
+                    <div class="chair-showcase">
+                        <div class="rounded-card">
+                            <img src="img/image 20.png" alt="">
+                        </div>
+                        <h3>Mini LCW Chair</h3>
+                        <p>$56.00</p>
+                    </div>
+                    <div class="chair-showcase">
+                        <div class="rounded-card">
+                            <img src="img/image 1168.png" alt="">
+                        </div>
+                        <h3>Mini LCW Chair</h3>
+                        <p>$56.00</p>
+                    </div>
+                    <div class="chair-showcase">
+                        <div class="rounded-card">
+                            <img src="img/image 1171.png" alt="">
+                        </div>
+                        <h3>Mini LCW Chair</h3>
+                        <p>$56.00</p>
+                    </div>
+                    <div class="chair-showcase">
+                        <div class="rounded-card">
+                            <img src="img/image 20.png" alt="">
+                        </div>
+                        <h3>Mini LCW Chair</h3>
+                        <p>$56.00</p>
+                    </div>
+                </div>
+                <div class="indicators">
+                    <span id="active"></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Newsletter -->
+    <section class="newsletter" style="background-image: url(img/Rectangle\ 102.png);">
+        <div class="container">
+            <div class="flex">
+                <h2>Get Latest Update By Subscribing 
+                    to our Newsletter
+                </h2>
+                <button class="primary-btn">Shop Now</button>
+            </div>
+        </div>
+    </section>
+
+    <!-- Sponsors -->
+    <section class="sponsors">
+        <div class="container">
+            <div class="flex">
+                <img src="img/image 1174.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <!-- Latest Blog -->
+    <section class="blog">
+        <div class="container">
+            <h2>Latest Blog</h2>
+            <div class="flex">
+                <article>
+                    <div class="thumbnail">
+                        <img src="img/JIUjvqe2ZHg.png" alt="">
+                    </div>
+                    <div class="description">
+                        <div class="about">
+                            <h5>Saber Ali</h5>
+                            <h5>21 August,2020</h5>
+                        </div>
+                        <h3>Top essential Trends in 2021</h3>
+                        <p>More off this less hello samlande lied much
+                            over tightly circa horse taped mightly
+                        </p>
+                        <a href="#">Read More</a>
+                    </div>
+                </article>
+                <article>
+                    <div class="thumbnail">
+                        <img src="img/2dcYhvbHV-M.png" alt="">
+                    </div>
+                    <div class="description">
+                        <div class="about">
+                            <h5>Saber Ali</h5>
+                            <h5>21 August,2020</h5>
+                        </div>
+                        <h3 id="active">Top essential Trends in 2021</h3>
+                        <p>More off this less hello samlande lied much
+                            over tightly circa horse taped mightly
+                        </p>
+                        <a id="active" href="#">Read More</a>
+                    </div>
+                </article>
+                <article>
+                    <div class="thumbnail">
+                        <img src="img/2dcYhvbHV-M (1).png" alt="">
+                    </div>
+                    <div class="description">
+                        <div class="about">
+                            <h5>Saber Ali</h5>
+                            <h5>21 August,2020</h5>
+                        </div>
+                        <h3>Top essential Trends in 2021</h3>
+                        <p>More off this less hello samlande lied much
+                            over tightly circa horse taped mightly
+                        </p>
+                        <a href="#">Read More</a>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="flex">
+                <div class="hekto">
+                    <h1 class="logo">Hekto</h1>
+                    <form>
+                        <input type="text" placeholder="Enter Email Address">
+                        <button>Sign Up</button>
+                    </form>
+                    <p>Contact Info</p>
+                    <p>17 Princess Road, London, Greater London NW1 8JR, UK</p>
+                </div>
+                <div>
+                    <h3>Categories</h3>
+                    <a href="#">Laptop & Computers</a>
+                    <a href="#">Cameras & Photography</a>
+                    <a href="#">Smart Phones & Tablets</a>
+                    <a href="#">Video Games & Consoles</a>
+                    <a href="#">Waterproof Headphones</a>
+                </div>
+                <div>
+                    <h3>Customer Care</h3>
+                    <a href="#">My Account</a>
+                    <a href="#">Discount</a>
+                    <a href="#">Returns</a>
+                    <a href="#">Order History</a>
+                    <a href="#">Order Tracking</a>
+                </div>
+                <div>
+                    <h3>Pages</h3>
+                    <a href="#">Blog</a>
+                    <a href="#">Browse the Shop</a>
+                    <a href="#">Category</a>
+                    <a href="#">Pre-Built Pages</a>
+                    <a href="#">Visual Composer Elements</a>
+                    <a href="#">WooCommerce Pages</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <section class="footer">
+        <div class="container">
+            <div><p>&copy; Webecy - All Rights Reserved</p></div>
+            <div class="icons">
+                <img src="img/Group 202.png" alt="">
+                <img src="img/Group 203.png" alt="">
+                <img src="img/Group 204.png" alt="">
             </div>
         </div>
     </section>
