--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
             </div>
         </div>
     </section>
+    <!-- Trending -->
 
     <section class="trending">
         <div class="container">
